# json-diff-app

./: .cavemanrc  .editorconfig  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierrc.json  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  CSV_LOADING_FIX.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_AFTER_FIX.md  README.md  SPREADSHEET_GUIDE.md  SPREADSHEET_PHASE3.md  SPREADSHEET_QUICKSTART.md  TESTING_GUIDE.md  cdp_flow_diagram.json  cdp_flow_graph.json  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.json
.codex/: instructions.md
.github/: copilot-instructions.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py  models.py
backend/app/routers/: diff.py
backend/app/services/: __init__.py  diff_service.py
backend/tests/: conftest.py  test_api.py  test_diff_service.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  test-csv-parsing.ts  vite.config.ts  vite.dev.local.ts
frontend/public/: test-csv-upload.html  test-upload.html
frontend/src/: app.css  app.html
frontend/src/lib/: api.test.ts  api.ts  index.ts  spreadsheet.css  types.ts
frontend/src/lib/components/: DiffList.svelte  DiffList.test.ts  DiffNode.svelte  DiffViewer.svelte  FlowDiagramEditor.svelte  InlineDiffViewer.svelte  JsonEditor.svelte  JsonTreeNode.svelte  SideBySideDiff.svelte  StatsPanel.svelte  StatsPanel.test.ts  index.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
(+125 files in other folders)
